tests/harness/snapshots/parser_05_4_pratt_evaluation_2__harness__helpers__assert_expr.snap
---
source: tests/harness/helpers.rs
expression: ast
---
Binary:
  left:
    Unary:
      op: Neg
      expr:
        Var: a
  op: Power
  right:
    Var: b
