tests/harness/snapshots/parser_05_4_pratt_evaluation_2__harness__helpers__assert_expr_with_ops-2.snap
---
source: tests/harness/helpers.rs
expression: ast
---
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Var: a
          op: Power
          right:
            Unary:
              op: Neg
              expr:
                Var: b
expr:
  Binary:
    left:
      Var: a
    op: Power
    right:
      Unary:
        op: Neg
        expr:
          Var: b
