tests/harness/snapshots/parser_05_4_pratt_evaluation_2__harness__helpers__assert_expr_with_ops@test_precedence_complex_expression_integration.snap
---
source: tests/harness/helpers.rs
expression: ast
---
stmts:
  - Let:
      name: a
      kind: MutableStatic
      value:
        Binary:
          left:
            Binary:
              left:
                Binary:
                  left:
                    Binary:
                      left:
                        Binary:
                          left:
                            Unary:
                              op: Neg
                              expr:
                                Call:
                                  callee:
                                    Member:
                                      target:
                                        Var: b
                                      field: c
                                  args: []
                          op: Power
                          right:
                            Var: d
                      op: Mul
                      right:
                        Var: e
                  op: Add
                  right:
                    Var: f
              op: Eq
              right:
                Var: g
          op: And
          right:
            Var: h
expr: ~
