tests/harness/snapshots/parser_05_4_pratt_evaluation_2__harness__helpers__assert_expr_with_ops@test_precedence_power_vs_multiplication.snap
---
source: tests/harness/helpers.rs
expression: ast
---
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Var: a
              op: Power
              right:
                Var: b
          op: Mul
          right:
            Var: c
expr:
  Binary:
    left:
      Binary:
        left:
          Var: a
        op: Power
        right:
          Var: b
    op: Mul
    right:
      Var: c
