tests/harness/snapshots/parser_05_4_pratt_evaluation_2__harness__helpers__assert_expr_with_ops@test_precedence_unary_vs_power.snap
---
source: tests/harness/helpers.rs
expression: ast
---
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Unary:
              op: Neg
              expr:
                Var: a
          op: Power
          right:
            Var: b
expr:
  Binary:
    left:
      Unary:
        op: Neg
        expr:
          Var: a
    op: Power
    right:
      Var: b
